--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <img src="assets/img/image/avatar-jessica.jpeg" alt="Image-profile" width="100px" height="100px">
-        <p class="head-paragraph1"><h1>Jessica Randall</h1></p>
+        <img src="assets/img/image/avatar-jessica.jpeg" alt="Image-profile">
+        <div class="head-paragraph1"><h1>Jessica Randall</h1></div>
         <p class="head-paragraph2">London, United Kingdom</p>
     </header>
     <p class="quotes">"Front-end developer and avid reader."</p>
